[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
ascii_tree = "0.1.1"
clap = { version = "4.5.19", features = ["derive"] }
lazy_static = "1.5.0"
nu-ansi-term = "0.50.1"
pest = "2.7.13"
pest_derive = "2.7.13"
reedline = "0.35.0"
rustyline = "14.0.0"
thiserror = "2.0.0"
